Revert "Update empty.html"
This reverts commit 2d10af20bf2ebddc84301a073a222253d06f6c52.

--- a/empty.html
+++ b/empty.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">  <!-- 모바일에서 콘텐츠 크기 최적화 -->
     <title>HTML 기본 템플릿</title>
 </head>
-<body> 연습하는 중 안녕하세여
+<body>
 </body>
 </html>
