--- a/empty.html
+++ b/empty.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">  <!-- 한글이 정상적으로 보이도록 설정 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">  <!-- 모바일에서 콘텐츠 크기 최적화 -->
     <title>HTML 기본 템플릿</title>
-</head>
+</head>연습
 <body>
 </body>
 </html>
