--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     style="overflow-x: hidden">
     </body>
 <head>
-   
+   <meta name="viewport" content="width=device-width, initial-scale=1.0,
+    maximum-scale=1, minimum-scale=1">
+    <meta name="viewport" content="user-scalable=0;"/>
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <link rel="stylesheet" type="text/css" href="0407.css">
