--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <body 
     style="overflow-x: hidden">
     </body>
+
+    <body style="overflow-x:hidden; overflow-y:auto;"></body>
 <head>
    <meta name="viewport" content="width=device-width, initial-scale=1.0,
     maximum-scale=1, minimum-scale=1">
