--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
 
 취미:작곡,VR게임
 
-연세가 많은 아버지 대신 정부에 힘이 되는것을 희망해 특수한 능력을 부여 받고 
-다른 차원을 넘나들며 지구멸망을 막기 위해 힘쓰는 중 
-경찰이 되기 전엔 평범한 작곡가였다. 
-항상 마이페이스인 성격이라 주위 사람을 곧장 휘둘리게 만들어 애를 많이 먹인다.
-전투를 치르던 중 한팔을 잃어버려 왼손은 의수로 대체하고 있다.</p>
+연세가 많은 아버지 대신 정부에 힘이 되는것을 희망해
+특수한 능력을 부여 받고 다른 차원을 넘나들며 
+지구멸망을 막기 위해 힘쓰는 중 경찰이 되기 전엔 평범한 작곡가였다. 
+항상 마이페이스인 성격이라 주위 사람을 곧장 휘둘리게 만들어
+애를 많이 먹인다. 전투를 치르던 중 한팔을 잃어버려 
+왼손은 의수로 대체하고 있다.</p>
             </div>
             <div id="oneword">
                 <h3>"전투Ai는 안 나와 줄려나."</h3>
