--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <body style="overflow-x:hidden; overflow-y:auto;"></body>
 <head>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0,
-    maximum-scale=1, minimum-scale=1">
+   <meta name="viewport" content="width=device-width, minimum-scale=1">
+
     <meta name="viewport" content="user-scalable=0;"/>
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
