--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </div>
 
     <div id="navmenu">
-        <a href=""><p>메인</p></a>
-        <a href=""><p>시스템</p></a>
+        <a href="메인.html"><p>메인</p></a>
+        <a href="시스템.html"><p>시스템</p></a>
         <a href="index.html"><p>캐릭터소개</p></a>
-        <a href=""><p>스토리</p></a>
+        <a href="스토리.html"><p>스토리</p></a>
     </div>
 </div>
 
@@ -43,9 +43,9 @@
   <a href="아쿠아.html"><img src="img/토른4.png" style="vertical-align:middle">
                 아쿠아</a>
   <img src="img/루모스.png" style="vertical-align:middle">
-  <a href=""><img src="img/토른.png" style="vertical-align:middle">
+  <a href="백수아.html"><img src="img/토른.png" style="vertical-align:middle">
                 백수아</a>
-  <a href=""><img src="img/토른2.png" style="vertical-align:middle">
+  <a href="유은하.html"><img src="img/토른2.png" style="vertical-align:middle">
                 유은하</a>
 
 
