--- a/메인.html
+++ b/메인.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <body 
-    style="overflow-x: hidden">
-    </body>
-
-    <body style="overflow-x:hidden; overflow-y:auto;"></body>
-<head>
-   <meta name="viewport" content="width=device-width, minimum-scale=1">
-
-    <meta name="viewport" content="user-scalable=0;"/>
+ 
+   
     <meta charset="utf-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="메인.css">
     <title>index</title>
 </head>
@@ -30,5 +23,9 @@
     </div>
 </div>
 
+
+<div id="main">
+    <img src="img/인트로(웹용).png" >
+</div>
 
     
