--- a/스토리.html
+++ b/스토리.html
@@ -26,7 +26,16 @@
         <a href="index.html"><p>캐릭터소개</p></a>
         <a href="스토리.html"><p>스토리</p></a>
     </div>
-</div>
 
+    <div id="A">
+        <img src="img/도시풍경.jpg" >
+    </div>
+
+    
+    <div id="B">
+        <img src="img/세계관.png" >
+    </div>
+
+</div>
 
     
