--- a/시스템.html
+++ b/시스템.html
@@ -29,5 +29,23 @@
     </div>
 </div>
 
+<div id="explanation">
+    <p>NPC가 주는 보급품을 받고 임무를 완수 하라!"</p>
+</div>
+
+<div id="main">
+    <img src="img/시스템.png" >
+</div>
+
+<div id="explanation">
+    <p>
+        차원에서 계속해서 소환되는 몬스터를 처치하여 게임을 클리어 하자!"</p>
+</div>
+
+
+<div id="main">
+    <img src="img/시스템2.png" >
+</div>
+
 
     
